fix(styling): remove header menu open class for Dark Mode - in Dark Mode, the `slick-header-column-active` CSS class was showing but that class should really only exists for when we are dragging the column to another position, it shouldn't be used at all when opening the header menu, so better remove it completely

--- a/examples/vite-demo-vanilla-bundle/src/material-styles.scss
+++ b/examples/vite-demo-vanilla-bundle/src/material-styles.scss
@@ -32,6 +32,8 @@
     --slick-container-border-bottom: 1px solid #ccc;
     --slick-header-background-color: #fff;
     --slick-header-row-filter-padding: 8px 4px;
+    --slick-header-text-color:  rgba(0, 0, 0, 0.87);
+    --slick-sorting-header-color: rgba(0, 0, 0, 0.87);
     --slick-font-family: Roboto, "Helvetica Neue", sans-serif;
     --slick-font-size-base-value: 14;
     --slick-header-font-size: 12px;
