--- a/packages/common/src/styles/_variables-theme-material.scss
+++ b/packages/common/src/styles/_variables-theme-material.scss
@@ -25,6 +25,7 @@ $slick-header-row-filter-padding:                           8px 4px !default;
 $slick-header-font-size:                                    12px !default;
 $slick-header-font-weight:                                  700 !default;
 $slick-header-text-color:                                   rgba(0, 0, 0, 0.87) !default;
+$slick-sorting-header-color:                                rgba(0, 0, 0, 0.87) !default;
 $slick-header-border-bottom:                                transparent !default;
 $slick-header-filter-row-border-bottom:                     1px solid #d0d0d0 !default;
 $slick-header-resizable-hover:                              2px solid lighten(#48c774, 15%) !default;
