--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -32,6 +32,7 @@ $slick-header-background-color:                               #fafaf9 !default;
 $slick-header-font-size:                                      13px !default;
 $slick-header-font-weight:                                    700 !default;
 $slick-header-text-color:                                     #514f4d !default;
+$slick-sorting-header-color:                                  #514f4d !default;
 $slick-header-border-bottom:                                  transparent !default;
 $slick-header-filter-row-border-bottom:                       2px solid #{$slick-primary-color-dark} !default;
 $slick-pane-top-border-top:                                   1px solid #d0d0d0 !default;
